fix: turn dropdown-menu background blue so not visible

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -360,7 +360,7 @@ a.navbar-brand>i{
 p.cart-dropdown-text{
     font-size: 0.9rem;
 }
-ul.dropdown-menu-cart{
+div.dropdown-menu-cart{
     border: none;
     background-color: var(--main-colour);
     height: 0;
